@@ -290,6 +290,11 @@ namespace Omegasis.Revitalize
             PlayerUtilities.CheckForInventoryItem(Game1.player.Items);
 
             ModContentManager.mailManager.tryToAddMailToMailbox();
+
+
+            //REMOVE THIS.
+            Game1.warpFarmer("QiNutRoom", 7, 8, 0);
+            Game1.player.QiGems = 100;
         }
 
         /// <summary>
